force-app/main/default/objects/Technical_Analysis_Trade__c/fields/Open_Price__c.field-meta.xml
<CustomField>
    <fullName>Open_Price__c</fullName>
    <label>Open Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>