force-app/main/default/objects/Technical_Analysis_Trade__c/fields/Profit_Pips__c.field-meta.xml
<CustomField>
    <fullName>Profit_Pips__c</fullName>
    <label>Profit Pips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>