force-app/main/default/objects/Technical_Analysis_Trade__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timeframe</valueSetName>
    </valueSet>
</CustomField>